log
Thu 28 Sep 2023 07:14:35 PM UTC: 
 tests:  0|4
total_score: 0/70
5b483ca
Thu 28 Sep 2023 07:17:59 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   36 |   Heap *nuevo = (Heap*) malloc(sizeof(Heap));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
1c76bf4
Thu 28 Sep 2023 07:20:41 PM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
ab2d86c
Thu 28 Sep 2023 07:22:31 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
0a0990f
Thu 28 Sep 2023 07:25:14 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
be8d235
Thu 28 Sep 2023 07:27:19 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fd45918
Thu 28 Sep 2023 07:29:43 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:22: error: ‘capac’ undeclared (first use in this function)
   37 |   for(int i = 0; i < capac; i++){
      |                      ^~~~~
heap.c:37:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
397e393
Thu 28 Sep 2023 07:30:04 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:22: error: ‘capac’ undeclared (first use in this function)
   39 |   for(int i = 0; i < capac; i++){
      |                      ^~~~~
heap.c:39:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
19176ce
Thu 28 Sep 2023 07:30:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:10: error: ‘*nuevo.heapArray’ is used uninitialized [-Werror=uninitialized]
   40 |     nuevo->heapArray[i].data = NULL;
      |     ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6a8b0d5
